fix ScrollBarre and getAllCommentsByEvent link

--- a/src/scenes/addEvent.css
+++ b/src/scenes/addEvent.css
@@ -296,7 +296,7 @@ input:focus ~ .bar:before, input:focus ~ .bar:after {
     right: 0;
     bottom: 0;
     left: 0;
-    overflow-y: hidden;
+    overflow-y: hidden !important;
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch
 }
